[gd_scene load_steps=8 format=2]

[ext_resource path="res://Minigames/BANG/Main.gd" type="Script" id=1]
[ext_resource path="res://Minigames/BANG/bang_1.png" type="Texture" id=2]
[ext_resource path="res://Minigames/BANG/bang_2.png" type="Texture" id=3]
[ext_resource path="res://Minigames/BANG/bang_4.png" type="Texture" id=4]
[ext_resource path="res://Minigames/BANG/bang_0.png" type="Texture" id=5]
[ext_resource path="res://Minigames/BANG/bang_3.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "ready",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "win",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "missed",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "bang",
"speed": 5.0
} ]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
NAME = "BANG"
INSTRUCTION = "WAIT FOR IT!"
DURATION = 7

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
centered = false

[node name="Wait_timer" type="Timer" parent="."]
one_shot = true

[node name="Shot_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="End_timer" type="Timer" parent="."]
one_shot = true

